<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".beBuddiiActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="136dp"
        android:layout_height="42dp"
        android:text="How to Use the App"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="31dp"
        tools:ignore="MissingConstraints" />

    <VideoView
        android:id="@+id/tutorialVideo"
        android:layout_width="901dp"
        android:layout_height="700dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>