<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity">

<Button
    android:id="@+id/abtUS"
    android:layout_width="250dp"
    android:layout_height="78dp"
    android:layout_marginTop="48dp"
    android:text="About Us"
    app:layout_constraintBottom_toTopOf="@+id/tutorial"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.595" />

<Button
    android:id="@+id/tutorial"
    android:layout_width="250dp"
    android:layout_height="78dp"
    android:layout_marginTop="20dp"
    android:text="How to Use the Buddii App"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/abtUS" />

</androidx.constraintlayout.widget.ConstraintLayout>