<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Map.BuddiiView.ScrollMapBuddii"
    tools:showIn="@layout/activity_scroll_map">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:background="@color/primaryColor"
        android:orientation="horizontal">

        <Button
            android:id="@+id/UserHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="onHomeClick"
            android:text="Home"
            app:backgroundTint="@color/primaryColor" />

        <Button
            android:id="@+id/UserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="onUserClick"
            android:text="Info"
            app:backgroundTint="@color/primaryColor" />

        <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight=".33"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:onClick="onRefreshClick"
            app:srcCompat="@android:drawable/ic_popup_sync" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/buddiiScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ScrollingActivity"
        tools:showIn="@layout/activity_scroll_map">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/BuddiiTabHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/alertRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/BuddiiTabUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <include
                    layout="@layout/user_profile"
                    android:layout_height="600dp"
                    tools:ignore="IncludeLayoutParam" />

                <Button
                    android:id="@+id/userDropButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Drop Buddii" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
